--- a/index.html
+++ b/index.html
@@ -3,77 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¡Feliz Cumpleaños!</title>
+    <title>Feliz Cumpleaños Marisol</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #fef9f4;
             margin: 0;
             padding: 0;
-        }
-        h1 {
-            color: #ff6347;
-            font-size: 3em;
-            margin-top: 50px;
-        }
-        .content {
-            padding: 20px;
-            background-color: #ffffff;
-            margin-top: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 80%;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .message {
-            font-size: 1.2em;
+            background-color: #f9f9f9;
             color: #333;
-            margin: 15px 0;
         }
-        .image-container {
-            margin-top: 20px;
+        header {
+            background-color: #ff6f61;
+            color: #fff;
+            text-align: center;
+            padding: 20px 10px;
         }
-        .image-container img {
-            width: 100%;
-            max-width: 400px;
-            border-radius: 10px;
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
         }
-        .cta-button {
-            display: inline-block;
-            padding: 15px 30px;
-            background-color: #ff6347;
-            color: white;
-            font-size: 1.5em;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 30px;
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
         }
-        .cta-button:hover {
-            background-color: #ff4500;
+        .reviews-section {
+            margin: 30px 0;
+        }
+        .reviews-title {
+            font-size: 1.8em;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .reviews-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+        .review-card {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 300px;
+            text-align: center;
+        }
+        .review-card h3 {
+            font-size: 1.2em;
+            margin-bottom: 10px;
+        }
+        .review-card p {
+            font-size: 1em;
+            margin: 0;
+            color: #666;
         }
         footer {
-            margin-top: 50px;
-            font-size: 1.2em;
-            color: #666;
+            text-align: center;
+            padding: 20px;
+            background-color: #ff6f61;
+            color: #fff;
+            margin-top: 30px;
+        }
+        footer p {
+            margin: 0;
+            font-size: 1em;
         }
     </style>
 </head>
 <body>
-    <h1>¡Feliz Cumpleaños!!!</h1>
-    <div class="content">
-        <div class="image-container">
-            <img src="ruta/a/tu/imagen.jpg" alt="Cumpleaños imagen divertida">
-        </div>
-        <div class="message">"¡Felíz año ey! ¡Beso!" – Chipí</div>
-        <div class="message">"¡Felicidades! ¡Te extrañamos, negra!" – Cochu</div>
-        <div class="message">"¡Amiga, sos la mejor x 100 pre!" – Roly</div>
-        <a href="#" class="cta-button">¡A disfrutar! 🎉</a>
+    <header>
+        <h1>¡Feliz Cumpleaños Marisol!</h1>
+    </header>
+    <div class="container">
+        <section class="reviews-section">
+            <h2 class="reviews-title">Mensajes de Amor para Marisol</h2>
+            <div class="reviews-container">
+                <div class="review-card">
+                    <h3>Chipí</h3>
+                    <p>"Felíz año ey! ¡Beso!"</p>
+                </div>
+                <div class="review-card">
+                    <h3>Cochu</h3>
+                    <p>"¡Felicidades! ¡Te extrañamos, negra!"</p>
+                </div>
+                <div class="review-card">
+                    <h3>Roly</h3>
+                    <p>"¡Amiga, sos la mejor x 100 pre!"</p>
+                </div>
+            </div>
+        </section>
     </div>
     <footer>
-        <p>¡Gracias por ser parte de este gran día! Que este año esté lleno de risas y momentos especiales.</p>
+        <p>Gracias por ser parte de este día tan especial. ¡Que este año esté lleno de alegría y amor!</p>
     </footer>
 </body>
 </html>
