--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             max-width: 300px;
             text-align: center;
+            animation: fadeInOut 8s infinite;
         }
         .review-card h3 {
             font-size: 1.2em;
@@ -70,12 +71,32 @@
             margin: 0;
             font-size: 1em;
         }
+        .image-center {
+            display: flex;
+            justify-content: center;
+            margin: 20px 0;
+        }
+        .image-center img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        @keyframes fadeInOut {
+            0%, 100% { opacity: 0; }
+            50% { opacity: 1; }
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>¡Feliz Cumpleaños Marisol!</h1>
     </header>
+
+    <div class="image-center">
+            <img src="mari.jpg" alt="Imagen especial para Marisol">
+    
+    </div>
+
     <div class="container">
         <section class="reviews-section">
             <h2 class="reviews-title">Mensajes de Amor para Marisol</h2>
@@ -92,9 +113,45 @@
                     <h3>Roly</h3>
                     <p>"¡Amiga, sos la mejor x 100 pre!"</p>
                 </div>
+                <div class="review-card">
+                    <h3>Pupu</h3>
+                    <p>"Sos un Sol Sol!"</p>
+                </div>
+                <div class="review-card">
+                    <h3>H. M.</h3>
+                    <p>"Poné camaritaaaa!"</p>
+                </div>
+                <div class="review-card">
+                    <h3>M. Alonso</h3>
+                    <p>"A festejar! Que suene mucho Leo Barattioli hoy!"</p>
+                </div>
+                <div class="review-card">
+                    <h3>M.D</h3>
+                    <p>"Hola, te Quiero"</p>
+                </div>
+                <div class="review-card">
+                    <h3>Tacho Verde</h3>
+                    <p>"Iiieeeba ! esssaaa! uuuuueeeoooesaaa! Feliz vida amiga del rock! Que la vida te sea un reci! Abrazazo!"</p>
+                </div>
+                <div class="review-card">
+                    <h3>El loquito de Eficaz</h3>
+                    <p>"Que festejes mucho y la pases lindo, ojo con acariciar la rata!"</p>
+                </div>
+                <div class="review-card">
+                    <h3>Nutris Falopas</h3>
+                    <p>"Felicidades! No consumas hidratos en tu día! vamos vamos! recordá, tenemos que llegar a nuestro objetivo! llegar a bajar hasta las 1000 calorias diarias! vamos Sooo!"</p>
+                </div>
+                <div class="review-card">
+                    <h3>A. P.</h3>
+                    <p>"Vamos eh! Felicidades Carri!"</p>
+                </div>
+                <div class="review-card">
+                    <h3>J.R</h3>
+                    <p>"Feliz cumple Marisol Betiana! Yo sí me acuerdo tu nombre"</p>
+                </div>
             </div>
         </section>
-    </div>
+    
     <footer>
         <p>Gracias por ser parte de este día tan especial. ¡Que este año esté lleno de alegría y amor!</p>
     </footer>
